# RenderEngine

./: CMakeLists.txt
resources/data/: config.json
resources/shaders/: compile.bat  frag.frag  frag.spv  vert.spv  vert.vert
src/: main.cpp
src/Game/: Ability.cpp  Ability.h  EventManager.cpp  EventManager.h  GameManager.cpp  GameManager.h
src/Vulkan/: vk_engine.cpp  vk_engine.h
